--- a/app/views/clubs/show.html.erb
+++ b/app/views/clubs/show.html.erb
@@ -3,6 +3,6 @@
 <%= image_tag @club.main_image unless @club.main_image.nil? %>
 <p><%= @club.address %></p>
 <p><%= @club.sport %></p>
-<p><%= link_to "Change details", edit_club_path %></p>
+<!--<p><%= link_to "Change details", edit_club_path %></p>-->
 <p><%= link_to "Back", clubs_path %></p>
-<p><%= link_to "Delete", club_path, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+<!--<p><%= link_to "Delete", club_path, method: :delete, data: { confirm: 'Are you sure?' } %></p>-->
