--- a/app/views/club_users/clubs/show.html.erb
+++ b/app/views/club_users/clubs/show.html.erb
@@ -3,5 +3,6 @@
 <%= image_tag @club.main_image unless @club.main_image.nil? %>
 <p><%= @club.address %></p>
 <p><%= @club.sport %></p>
+<!--<p><%= @current_club_user.first_name %></p>-->
 <p><%= link_to "Change details", edit_club_user_club_path %></p>
 <p><%= link_to "Delete", club_user_club_path, method: :delete, data: { confirm: 'Are you sure?' } %></p
